# api/v2/api.go
@@ -221,7 +221,7 @@ func (api *API) getReceiversHandler(params receiver_ops.GetReceiversParams) midd
 			sendResolved := integration.SendResolved()
 			integrations = append(integrations, &open_api_models.Integration{
 				Name:               &iname,
-				SendResolve:        &sendResolved,
+				SendResolved:       &sendResolved,
 				LastNotify:         strfmt.DateTime(notify.UTC()),
 				LastNotifyDuration: duration.String(),
 				LastError: func() string {
